# VkInline

./: .gitmodules  CMakeLists.txt  Context.cpp  Context.h  Context_ex.h  Context_ex.inl  README.md  SVBuffer.cpp  SVBuffer.h  SVCombine.cpp  SVCombine.h  SVObjBuffer.cpp  SVObjBuffer.h  ShaderViewable.h  glslc.cpp
internal/: impl_context.inl  impl_context_ex.inl  internal_context.cpp  internal_context.h  internal_context_ex.h  internal_context_ex.inl
python/: CMakeLists.txt  api.h  api_Context.cpp  api_Context_ex.inl  api_Cubemap.cpp  api_SVBuffer.cpp  api_SVCombine.cpp  api_SVObjBuffer.cpp  api_ShaderViewable.cpp  api_Texture2D.cpp  api_Texture3D.cpp  api_ex.h  api_utils.cpp  setup.py
python/VkInline/: Context.py  ContextEX.py  Cubemap.py  Native.py  NativeEX.py  SVBuffer.py  SVCombine.py  SVObjBuffer.py  SVObjVector.py  SVVector.py  ShaderViewable.py  Texture2D.py  Texture3D.py  __init__.py  cffi.py  cffi_build.py  utils.py
python/test/: CMakeLists.txt  test_compute.py  test_for.py  test_multithread.py  test_obj.py  test_rasterization.py  test_raytrace.py  test_reduce.py  test_tex2d.py
test/: CMakeLists.txt  test.cpp
